...
  return d
    ? d.toLocaleDateString(undefined, {
        year: "numeric",
        month: "long",
        day: "numeric",
      })
    : "Select your date of birth";
}
function calcAge(d) {
  const today = new Date();
  let age = today.getFullYear() - d.getFullYear();
  const m = today.getMonth() - d.getMonth();
  if (m < 0 || (m === 0 && today.getDate() < d.getDate())) age--;
...
                    value={gender}
                    placeholder={{
                      label: "Select Gender",
                      value: null
                    }}
                    items={[
                      { label: "Male", value: "male" },
                      { label: "Female", value: "female" },
                      { label: "Non-binary", value: "non-binary" },
                      { label: "Other", value: "other" },
                    ]}
                  />
                </View>
...
